[IMAPx] Return cached folder list even when being online
When Evolution starts online in the Mail component, it fetches the list of folders from the IMAP server and shows them to the user. During the fetching the Mail component cannot be used, as it shows no data, even when everything necessary is cached. Fetching of the list of folders can take a while, e.g. when the server or the network is very slow. A mitigation, ensuruing the Mail component is usefull all the time, is to start in offline mode and then go online. This workaround is not very elegant.
- When Evolution starts (in online mode) display the cached list of IMAP mailboxes, until an updated list of mailboxes is retrieved.
Edited by Milan Crha