I#106 - [IMAPx] Return cached folder list even when being online

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/106